@@ -75,7 +75,7 @@ Boston, MA 02111-1307, USA.  */
 
 /*
 
-@deftypefn Replacement long get_run_time ()
+@deftypefn Replacement long get_run_time (void)
 
 Returns the time used so far, in microseconds.  If possible, this is
 the time used by this process, else it is the elapsed time since the
